# campllm

./: .env.example  .gitignore  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: crawl-output.md  final_project.tex  proposal.md
slidev/: pnpm-lock.yaml  script.md  slides.md
src/api/: main.py
src/api/templates/: chat.js  index.html
src/crawler/: crawler.js
src/database/: database.py  embedding.py
src/database/collection/: park.py
src/rag/: llm.py  rag.py
src/script/: chat.py  collect.js  database.py  index.py  park.py
src/util/: clean.py  index.py  processors.js  rubric.js  runner.py
