[project]
name = "campllm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "jinja2>=3.1.6",
    "model2vec>=0.7.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.45.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
park = "src.script.index:main"
database = "src.script.database:main"
chat = "src.script.chat:main"
api = "src.api.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
